code review: core-entity